2000-07-17  Martin Wilck  <martin@tropos.de>

	* autoupdate.sh (autoconf): s,$updated,$tmp/updated,.

2000-07-17  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Configuration Actions): Explain the
	behavior of  AC_CONFIG_HEADERS and AC_CONFIG_FILES with respect to
	absolute and relative filenames, and stdin/stdout.
	(config.status invocation): Likewise.

2000-07-17  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Configuration Actions): Explain the
	behavior of  AC_CONFIG_HEADERS and AC_CONFIG_FILES with respect to
	absolute and relative filenames, and stdin/stdout.
	(config.status invocation): Likewise.

2000-07-13  Akim Demaille  <akim@epita.fr>

	Make it easier to trace what autoreconf does.

	* autoheader.sh: Be more verbose, and always report your name in
	verbose messages.
	* autoconf.sh: Likewise.
	* autoreconf.sh: Likewise.
	(update.sh): Redirect ls's stderr to /dev/null.

2000-07-13  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS): Properly
	handle absolute input file names.
	From Alexandre Oliva.

2000-07-12 Martin Wilck <martin@tropos.de>

	* aclang.m4 (AC_PROG_F77): Delete AC_BEFORE(AC_PROG_CPP) that
	leads to unnecessary warnings if both C and Fortran are checked.
	(AC_PROG_F77_C_O): AC_REQUIRE AC_PROG_F77 instead of pretend you
	need to be AC_BEFORE it.

2000-07-12  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (_ac_warnings): Fix call to tr.
	Reported by Johan Danielsson.

2000-07-11  Martin Wilck <martin@tropos.de>

	* aclang.m4 (_AC_PROG_F77_V): New macro to determine the flag that
	causes the compiler to output verbose linking information.
	(AC_F77_LIBRARY_LDFLAGS): Use _AC_PROG_F77_V instead of
	simply "-v"
	(AC_F77_LIBRARY_LDFLAGS): New algorithm to parse flags, uses
	set/shift shell commands.
	(AC_F77_LIBRARY_LDFLAGS): Set FLIBS at end, after determining
	ac_cv_flibs.

2000-07-11  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_DEFAULTS) <ac_max_here_lines>: Set to 38